--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,3 +1,5 @@
+<%= cl_image_tag("hkproifk2mlqc6naf8y9",
+      width: 400, height: 300, crop: :fill) %>
 <div class="container col-6">
 <h1>Add new listing</h1>
 <%= simple_form_for (@listing) do |f| %>
