added connection to show

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -43,7 +43,7 @@
         <img class="card-img-top" src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg">
           <div class="card-body">
             <div>
-              <h2><%= listing.name %> </h2>
+              <%= link_to listing.name, listing %></li>
               <p><%= listing.address %> </p>
               <p> 50 $ per night </p>
           </div>
