--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -7,6 +7,7 @@
   <%= f.input :address%>
   <%= f.input :max_cap, :label => "Maximum Occupancy", collection: (1..9) %>
   <%= f.input :description%>
+  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.submit %>
 <% end %>
 </div>
