--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,3 +4,20 @@
 body {
   background: white; // Using this variable
 }
+
+.cat-bar img {
+  height: 20px;
+  width: 20px;
+  object-fit: cover;
+}
+
+.card-photo img {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  /* overflow: hidden; */
+  object-fit: cover;
+  //object-fit: contain;
+  border: 1px solid #e8e8e8;
+  border-radius: 8px;
+
+  }
