Made some change

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -75,7 +75,7 @@
   <div class="container">
     <div class="row">
       <% @listings.each do |listing| %>
-        <div class="col-md-4 border">
+        <div class="col-md-4">
             <div class="card-photo m-2 rounded" style="width: 18rem;">
               <% if listing.photos.attached? %>
                 <div style="position: relative">
