CSS styling for show listing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,8 @@
 @import "components/index";
 @import "pages/index";
 //@import "bootstrap";
+
+.row.no-padding > * {
+  padding-right: 0;
+  padding-left: 0;
+}
