--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,6 +2,7 @@
 @import "home";
 @import "listing_new";
 @import "reservation_new";
+@import "listing_show";
 
 body {
   background: white; // Using this variable
