--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,19 +4,16 @@
   <div class="details d-flex">
     <div style="flex-grow: 1">
       <p>
-        <i class="fa-solid fa-star"></i> 33 reviews &nbsp; . &nbsp; <i class="fa-solid fa-certificate"></i> Superhost  &nbsp; . &nbsp; Kittila, Finland
+        <i class="fa-solid fa-star"></i> 33 reviews &nbsp; . &nbsp; <i class="fa-solid fa-certificate"></i> Superhost  &nbsp; . &nbsp; <%= @listing.address %>
       </p>
     </div>
     <div>
       <p>
-        <i class="fa-solid fa-arrow-up-from-bracket"></i> Share  &nbsp; &nbsp; <i class="fa-regular fa-heart"></i> Save
+        <i class="fa-solid fa-arrow-up-from-bracket"></i> Share  &nbsp; &nbsp; <i class="fa-regular fa-heart"></i> <%= link_to "Save", listing_path(@listing), style: "text-decoration: none;", color: "black;"%>
       </p>
     </div>
   </div>
 
-  <p><%= @listing.address %></p>
-  <p><%= @listing.description %></p>
-  <p>Max occupancy: <%= @listing.max_cap %></p>
   <% if @listing.photos.attached? %>
     <div class="container" style="
     overflow:hidden;
@@ -50,4 +47,60 @@
       </div>
     </div>
   <% end %>
+
+    <!-- restaurant menu / checkout-->
+    <div class="container py-3">
+      <div class="row">
+        <div class="col-md-8">
+
+          <!-- turn this into an alert (warning) -->
+          <div class="alert alert-warning" role="alert">
+            Going to order alcohol? We'll need to see your <strong>ID</strong>.
+          </div>
+
+          <h2>12" Pizza</h2>
+
+          <!-- make a card -->
+          <div class="card p-3 mb-3">
+            <p><strong>Margherita</strong></p>
+            <p><small><%= @listing.description%></small></p>
+            <span>£4.95</span>
+          </div>
+
+          <!-- make a card -->
+          <div class="card p-3 mb-3">
+            <p><strong>4 Formaggi</strong></p>
+            <p><small>Gorgonzola, parmesan, robiola, tomato, basil, mozzarella</small></p>
+            <span>£5.55</span>
+          </div>
+
+          <!-- make a card -->
+          <div class="card p-3 mb-3">
+            <p><strong>4 stagioni</strong></p>
+            <p><small>Parma ham, mushrooms, capers, anchovy, tomato, basil, mozzarella</small></p>
+            <span>£5.95</span>
+          </div>
+          <!-- /menu -->
+        </div>
+          <div class="col-md-4">
+            <!-- checkout -->
+            <div class="reserve-container">
+
+              <div class="d-flex justify-content-between mt-3">
+                <p><strong>Diavola</strong> (1)</p>
+                <p>£6.95</p>
+              </div>
+
+              <div class="d-flex justify-content-between mt-3">
+                <p><strong>Total</strong></p>
+                <p><strong>£23.80</strong></p>
+              </div>
+
+              <!-- make this a full length button -->
+              <a href="" class="reserve-btn w-100">Reserve</a>
+            </div>
+            <!-- /checkout -->
+          </div>
+      </div>
+    </div>
 </div>
