--- a/app/assets/stylesheets/pages/_listing_show.scss
+++ b/app/assets/stylesheets/pages/_listing_show.scss
@@ -44,5 +44,20 @@
 }
 
 h2 {
-  font-weight: 500;
+  font-weight: 600;
+  font-size: 28px;
+}
+
+.line {
+  border-bottom: 1px solid #cacaca;
+}
+
+.margin-top-btm {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.container {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
