--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -52,46 +52,35 @@
     <div class="container py-3">
       <div class="row">
         <div class="col-md-8">
+          <h2>Home hosted by <%= current_user.email %></h2>
 
-          <!-- turn this into an alert (warning) -->
-          <div class="alert alert-warning" role="alert">
-            Going to order alcohol? We'll need to see your <strong>ID</strong>.
-          </div>
-
-          <h2>12" Pizza</h2>
+          <div class="line"></div>
 
           <!-- make a card -->
-          <div class="card p-3 mb-3">
-            <p><strong>Margherita</strong></p>
-            <p><small><%= @listing.description%></small></p>
-            <span>£4.95</span>
+          <div class="margin-top-btm">
+            <p><strong>Self check-in</strong><br>You can check in with the doorperson.</p>
+            <p><strong>Experienced Host</strong><br>Madhava has 433 reviews for other places.</p>
           </div>
 
-          <!-- make a card -->
-          <div class="card p-3 mb-3">
-            <p><strong>4 Formaggi</strong></p>
-            <p><small>Gorgonzola, parmesan, robiola, tomato, basil, mozzarella</small></p>
-            <span>£5.55</span>
-          </div>
+          <div class="line"></div>
 
           <!-- make a card -->
-          <div class="card p-3 mb-3">
-            <p><strong>4 stagioni</strong></p>
-            <p><small>Parma ham, mushrooms, capers, anchovy, tomato, basil, mozzarella</small></p>
-            <span>£5.95</span>
+          <div class="margin-top-btm">
+            <p><small><%= @listing.description %></small></p>
           </div>
+
           <!-- /menu -->
         </div>
           <div class="col-md-4">
             <!-- checkout -->
             <div class="reserve-container">
 
-              <div class="d-flex justify-content-between mt-3">
+              <div class="d-flex justify-content-between my-5">
                 <p><strong>Diavola</strong> (1)</p>
                 <p>£6.95</p>
               </div>
 
-              <div class="d-flex justify-content-between mt-3">
+              <div class="d-flex justify-content-between my-5">
                 <p><strong>Total</strong></p>
                 <p><strong>£23.80</strong></p>
               </div>
