--- a/app/assets/stylesheets/pages/_listing_show.scss
+++ b/app/assets/stylesheets/pages/_listing_show.scss
@@ -52,6 +52,11 @@ h2 {
   border-bottom: 1px solid #cacaca;
 }
 
+.outline {
+  border: 1px solid #cacaca;
+  border-radius: 8px;
+}
+
 .margin-top-btm {
   margin-top: 20px;
   margin-bottom: 20px;
