--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div>
       <p>
-        <i class="fa-solid fa-arrow-up-from-bracket"></i> Share  &nbsp; &nbsp; <i class="fa-regular fa-heart"></i> <%= link_to "Save", listing_path(@listing), style: "text-decoration: none;", color: "black;"%>
+        <i class="fa-solid fa-arrow-up-from-bracket"></i> Share  &nbsp; &nbsp; <i class="fa-regular fa-heart"></i> <%= link_to "Save", listing_path(@listing), style: "text-decoration: none; color: black;"%>
       </p>
     </div>
   </div>
@@ -52,7 +52,8 @@
     <div class="container py-3">
       <div class="row">
         <div class="col-md-8">
-          <h2>Home hosted by <%= current_user.email %></h2>
+          <% username = @listing.user.email.split("@").first.capitalize %>
+          <h2>Home hosted by <%= username %></h2>
 
           <div class="line"></div>
 
@@ -75,20 +76,37 @@
             <!-- checkout -->
             <div class="reserve-container">
 
-              <div class="d-flex justify-content-between my-5">
-                <p><strong>Diavola</strong> (1)</p>
-                <p>£6.95</p>
+              <div class="d-flex justify-content-between my-3">
+                <h2><strong><%= @listing.price.round %> SGD</strong><small>night</small></h2>
               </div>
 
-              <div class="d-flex justify-content-between my-5">
+              <div class="checkout outline">
+                <div class="d-flex" style="border-bottom: 1px solid #cacaca;">
+                  <div class="w-50 p-3" style="border-right: 1px solid #cacaca;">
+                    <div><strong>CHECK-IN</strong></div>
+                    <div><%= Date.today %></div>
+                  </div>
+                  <div class="w-50 p-3">
+                    <div><strong>CHECK-OUT</strong></div>
+                    <div><%= Date.today %></div>
+                  </div>
+                </div>
+                  <div class="w-50 p-3">
+                    <div><strong>GUESTS</strong></div>
+                    <div><%= @listing.max_cap %></div>
+                  </div>
+              </div>
+              <p class="my-3" style="text-align: center">You won't be charged yet</p>
+              <!-- make this a full length button -->
+              <a href="" class="reserve-btn w-100">Reserve</a>
+
+              <!-- /checkout -->
+              <div class="d-flex justify-content-between my-3">
                 <p><strong>Total</strong></p>
                 <p><strong>£23.80</strong></p>
               </div>
 
-              <!-- make this a full length button -->
-              <a href="" class="reserve-btn w-100">Reserve</a>
             </div>
-            <!-- /checkout -->
           </div>
       </div>
     </div>
