--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,48 +1,4 @@
-<div class="navbar fixed-top navbar-expand-sm navbar-light navbar-lewagon ">
-  <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://companieslogo.com/img/orig/ABNB-4aaade0f.png?t=1633511992" %>
-    <% end %>
-
-    <div class="btn-group btn-group-lg rounded" role="group" aria-label="...">
-      <button type="button" class="btn btn-secondary btn btn-light rounded-pill-left ">Anywhere</button>
-      <button type="button" class="btn btn-secondary btn btn-light pill-center">Any week</button>
-      <button type="button" class="btn btn-secondary btn btn-light rounded-pill-right ">Add guests</button>
-    </div>
-
-    <button class="btn-switch">Switch to hosting</button>
-
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <%# if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", "#", class: "dropdown-item", data: {turbo_method: :delete} %>
-            </div>
-          </li>
-        <%# else %>
-          <!--li class="nav-item"-->
-            <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
-            <!--/li-->
-          <%# end %>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<br><br><br>
-<div class="container">
+<div class="container-icon-filter">
   <div class="cat-bar px-2">
     <div class="container">
       <div class="row">
@@ -94,9 +50,9 @@
                   <div class="card-bottom ">
                     <div class="button-top-line d-flex justify-content-between">
                       <p style= "color: black;"><%= link_to listing.address, listing %> </p>
-                      <p class="text-black" style= "color: black;" >⭐4,5</p>
+                      <p class="text-black" style= "color: black;" ><i class="fa fa-star"></i> 4,5</p>
                     </div>
-                    <p> 50 $ per night </p>
+                    <p> $ <%= listing.price %> per night </p>
                   </div>
                 </div>
               </div>
