changed Bob seed and maths in checkout

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -103,7 +103,7 @@
               <!-- /checkout -->
               <div class="d-flex justify-content-between my-3">
                 <p><strong>Total</strong></p>
-                <p><strong>£23.80</strong></p>
+                <p><strong>$<%=@listing.price.round * @listing.max_cap%></strong></p>
               </div>
 
             </div>
