--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -91,6 +91,12 @@
                     <div><%= Date.today %></div>
                   </div>
                 </div>
+                <%= simple_form_for([@listing, @reservation]) do |f| %>
+                  <%= f.input :start_date %>
+                  <%= f.input :end_date %>
+                  <%= f.input :number_of_people %>
+                  <%= f.submit "Make reservation", class: "btn btn-primary" %>
+                <% end %>
                   <div class="w-50 p-3">
                     <div><strong>GUESTS</strong></div>
                     <div><%= @listing.max_cap %></div>
@@ -107,6 +113,7 @@
               </div>
 
             </div>
+
           </div>
       </div>
     </div>
