--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -2,4 +2,5 @@
   <h1><strong>Reservation confirmed!</strong></h1>
   <h2> Start date: <%= @reservation.start_date %> </h2>
   <h2> End date: <%= @reservation.end_date %> </h2>
+  <h2> Number of people: <%= @reservation.number_of_people %> </h2>
 </div>
