--- a/app/views/wishlists/index.html.erb
+++ b/app/views/wishlists/index.html.erb
@@ -24,7 +24,7 @@
               <div style="background-image: url(<%= cl_image_path(wishlist.listings[0].photos[0].key)%>); background-position: center; background-size: cover; height: 300px; width: 100%;"></div>
               <div>
                 <div style="background-image: url(<%= wishlist.listings[1] ? cl_image_path(wishlist.listings[1].photos[0].key) : ''%>); background-position: center; background-size: cover; height: 150px; width: 100%"></div>
-                <div style="background-image: url(<%= wishlist.listings[2] ?  image_path('hawa3.jpg') : ''%>); background-position: center; background-size: cover; height: 150px; width: 100%"></div>
+                <div style="background-image: url(<%= wishlist.listings[2] ? cl_image_path(wishlist.listings[2].photos[0].key) : ''%>); background-position: center; background-size: cover; height: 150px; width: 100%"></div>
               </div>
             </div>
             <div class="display-6">
