--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -4,3 +4,5 @@
   <h2> End date: <%= @reservation.end_date %> </h2>
   <h2> Number of people: <%= @reservation.number_of_people %> </h2>
 </div>
+
+<%= link_to 'Back', :back %>
