--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="right-container">
-      <button class="btn-switch">Switch to hosting</button>
+       <button class="btn-switch">  <%= link_to "Switch to hosting", hosting_path%></button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,7 +26,7 @@
         <ul class="navbar-nav me-auto">
           <%# if user_signed_in? %>
             <li class="nav-item active">
-              <%= link_to "Home", "#", class: "nav-link" %>
+              <%= link_to "Home", root_path, class: "nav-link" %>
             </li>
             <li class="nav-item dropdown">
               <%= image_tag "https://avatars.githubusercontent.com/u/130457340?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
