Show pages for listing and reversation

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,6 +3,7 @@
 @import "listing_new";
 @import "reservation_new";
 @import "listing_show";
+@import "reservation_show";
 
 body {
   background: white; // Using this variable
