--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -37,7 +37,7 @@
             <div class="card-photo m-2 rounded" style="width: 18rem;">
               <% if listing.photos.attached? %>
                 <div style="position: relative">
-                <% if @favourites.pluck(:listing_id).include?(listing.id) %>
+                <% if @favourites && @favourites.pluck(:listing_id).include?(listing.id) %>
                    <span style="font-size: 1.4rem; position: absolute; top: 15px; right: 15px; color: #f96cd3;" class="fa-solid fa-heart"></span>
                 <% else %>
                     <span data-bs-toggle="modal" data-bs-target="#<%=listing.id%>Modal" style="font-size: 1.4rem; position: absolute; top: 15px; right: 15px; color: #f96cd3;" class="fa-regular fa-heart"></span>
@@ -59,6 +59,7 @@
             </div>
         </div>
           <!-- Modal -->
+          <% if @wishlists %>
           <div class="modal fade" id="<%=listing.id%>Modal" tabindex="-1" aria-labelledby="<%=listing.id%>ModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -82,6 +83,7 @@
               </div>
             </div>
           </div>
+          <% end %>
       <% end %>
     </div>
   </div>
