--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
         <div class="col-3">
           <div class="left-container ">
             <div class="d-flex align-items-center">
-                <%= link_to "#", class: "navbar-brand" do %>
+                <%= link_to root_path, class: "navbar-brand" do %>
                   <%= image_tag "https://companieslogo.com/img/orig/ABNB-4aaade0f.png?t=1633511992" %>
                 <% end %>
             </div>
@@ -29,7 +29,7 @@
         <div class="col-3">
           <div class="right-container ">
             <% if request.path == "/listings/new" or "/hosting" %>
-              <button class="btn-switch">Switch to hosting</button>
+              <button  class="btn-switch", style="text-decoration: none;"> <%= link_to "Switch to hosting", hosting_path  %> </button>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -37,17 +37,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto">
                   <li class="nav-item active">
-                    <%= link_to "Home", "#", class: "nav-link" %>
+                    <%= link_to "Home", root_path, class: "nav-link" %>
                   </li>
                   <li class="nav-item dropdown">
+                    <%= image_tag "https://avatars.githubusercontent.com/u/130457340?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                       <%= link_to "Action", "#", class: "dropdown-item" %>
                       <%= link_to "Another action", "#", class: "dropdown-item" %>
                       <%= link_to "Wishlists", wishlists_path, class: "dropdown-item" %>
                       <%= link_to "Log out", destroy_user_session_path , class: "dropdown-item", data: {turbo_method: :delete} %>
-                        <%#  if user_signed_in? %>
-                          <%= image_tag "https://avatars.githubusercontent.com/u/130457340?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-                        <%# end %>
                     </div>
                   </li>
                 </ul>
@@ -63,4 +61,3 @@
 
 
 <div class="navbar-line"></div>
-
